# Smash

./: CMakeLists.txt  README.md  alias.c  buildCommandIndex  commandIndex.txt  commands.c  errorHandler.c  gitignore.txt  input.c  list.c  main.c  parser.c  test.sh  testinput.txt
includes/: alias.h  commands.h  errorHandler.h  input.h  list.h  parser.h
